Add db migration

--- a/.github/workflows/GCP-Deploy.yml
+++ b/.github/workflows/GCP-Deploy.yml
@@ -6,6 +6,10 @@ on:
   pull_request:
     branches: [ master ]
 
+env:
+  dbhost: ${{secrets.DB_HOST}}
+  dbport: ${{secrets.DB_PORT}}
+
 jobs:
 
     deploy:
