--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,6 +25,9 @@ jobs:
           POSTGRES_PASSWORD: postgres
           POSTGRES_USER: root
           POSTGRES_DB: trackerr
+        ports:
+          # Maps tcp port 5432 on service container to the host
+          - 5432:5432
         # Set health checks to wait until postgres has started
         options: >-
           --health-cmd pg_isready
