--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,11 +10,12 @@ jobs:
       runs-on: ubuntu-latest
       env: 
         IMAGE_NAME: trackerr-api
+        PROJECT_ID: ${{ secrets.GCP_PROJECT_ID }}
       steps:
       - name: Checkout
         uses: actions/checkout@v3
       
-      - uses: google-github-actions/setup-gcloud@master
+      - uses: google-github-actions/setup-gcloud@v0
         with:
           project_id: ${{ secrets.GCP_PROJECT_ID }}
           service_account_email: ${{ secrets.GCP_EMAIL }}
