--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,6 +28,7 @@ jobs:
       - name: Configure Docker Client
         run: |-
           gcloud auth configure-docker --quiet
+          gcloud auth configure-docker asia-southeast2-docker.pkg.dev --quiet
 
       - name: Push Docker Image to Container Registry (GCR)
         env:
@@ -37,35 +38,12 @@ jobs:
           docker tag $IMAGE_NAME:latest asia.gcr.io/$PROJECT_ID/$IMAGE_NAME:$GIT_TAG
           docker push asia.gcr.io/$PROJECT_ID/$IMAGE_NAME:latest
           docker push asia.gcr.io/$PROJECT_ID/$IMAGE_NAME:$GIT_TAG
-    # deploy:
-
-    #     name: Setup Gcloud Account
-    #     runs-on: ubuntu-latest
-    #     env:
-    #       IMAGE_NAME: gcr.io/${{ secrets.GCP_PROJECT_ID }}/${{ secrets.GCP_APP_NAME }}
-    #     steps:
-
-    #     - name: Login
-    #       uses: google-github-actions/setup-gcloud@v0
-    #       with:
-    #         project_id: ${{ secrets.GCP_PROJECT_ID }}
-    #         service_account_email: ${{ secrets.GCP_EMAIL }}
-    #         service_account_key: ${{ secrets.GCP_CREDENTIALS }}
-
-    #     - name: Configure Docker
-    #       run: gcloud auth configure-docker --quiet
-
-    #     - name: Checkout repository
-    #       uses: actions/checkout@v2
-
-    #     - name: Build Docker image
-    #       run: docker build . -t $IMAGE_NAME
-
-    #     - name: Test Docker image
-    #       run: docker run $IMAGE_NAME sh -c "go test -v"
-
-    #     - name: Push Docker image
-    #       run: docker push $IMAGE_NAME
-
-    #     - name: Deploy Docker image
-    #       run: gcloud run deploy ${{ secrets.GCP_PROJECT_ID }} --image $IMAGE_NAME --region asia-southeast2 --platform managed
+      
+      - name: Push Docker Image to Artifact Registry (GCR)
+        env:
+          GIT_TAG: v0.1.0
+        run: |-
+          docker tag $IMAGE_NAME:latest asia-southeast2-docker.pkg.dev/$PROJECT_ID/$IMAGE_NAME:latest
+          docker tag $IMAGE_NAME:latest asia-southeast2-docker.pkg.dev/$PROJECT_ID/$IMAGE_NAME:$GIT_TAG
+          docker push asia-southeast2-docker.pkg.dev/$PROJECT_ID/$IMAGE_NAME:latest
+          docker push asia-southeast2-docker.pkg.dev/$PROJECT_ID/$IMAGE_NAME:$GIT_TAG
