--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,6 +25,11 @@ jobs:
       - name: Build Docker Image
         run: docker build -t $IMAGE_NAME:latest .
 
+      - name: Automatic Tagging of Releases
+        id: increment-git-tag
+        run: |
+          bash ./scripts/git_update.sh -v patch
+
       - name: Configure Docker Client
         run: |-
           gcloud auth configure-docker --quiet
@@ -32,16 +37,16 @@ jobs:
 
       - name: Push Docker Image to Container Registry (GCR)
         env:
-          GIT_TAG: v0.1.0
+          GIT_TAG: ${{ steps.increment-git-tag.outputs.git-tag }}
         run: |-
           docker tag $IMAGE_NAME:latest asia.gcr.io/$PROJECT_ID/$IMAGE_NAME:latest
           docker tag $IMAGE_NAME:latest asia.gcr.io/$PROJECT_ID/$IMAGE_NAME:$GIT_TAG
           docker push asia.gcr.io/$PROJECT_ID/$IMAGE_NAME:latest
           docker push asia.gcr.io/$PROJECT_ID/$IMAGE_NAME:$GIT_TAG
       
-      - name: Push Docker Image to Artifact Registry (GCR)
+      - name: Push Docker Image to Artifact Registry
         env:
-          GIT_TAG: v0.1.0
+          GIT_TAG: ${{ steps.increment-git-tag.outputs.git-tag }}
         run: |-
           docker tag $IMAGE_NAME:latest asia-southeast2-docker.pkg.dev/$PROJECT_ID/$IMAGE_NAME:latest
           docker tag $IMAGE_NAME:latest asia-southeast2-docker.pkg.dev/$PROJECT_ID/$IMAGE_NAME:$GIT_TAG
