--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,7 +2,7 @@ name: Deploy to production
 
 on:
   push:
-    branches: [ master ]
+    branches: [ master, test-actions ]
 
 jobs:
     build-push-gcr: 
@@ -11,6 +11,7 @@ jobs:
       env: 
         IMAGE_NAME: trackerr-api
         PROJECT_ID: ${{ secrets.GCP_PROJECT_ID }}
+        TOKEN_DURATION: ACCESS_TOKEN_DURATION
       steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -21,34 +22,44 @@ jobs:
           service_account_email: ${{ secrets.GCP_EMAIL }}
           service_account_key: ${{ secrets.GCP_CREDENTIALS }}
           export_default_credentials: true
-      
-      - name: Build Docker Image
-        run: docker build -t $IMAGE_NAME:latest .
 
-      - name: Automatic Tagging of Releases
-        id: increment-git-tag
+      - name: Read secret from GCP Secret Manager
         run: |
-          bash ./scripts/git_update.sh -v patch
-
-      - name: Configure Docker Client
-        run: |-
-          gcloud auth configure-docker --quiet
-          gcloud auth configure-docker asia-southeast2-docker.pkg.dev --quiet
-
-      - name: Push Docker Image to Container Registry (GCR)
+          secret=$(gcloud beta secrets versions access latest --secret=$TOKEN_DURATION)
+          echo "::set-env name=SECRET_VAR::$secret"
         env:
-          GIT_TAG: ${{ steps.increment-git-tag.outputs.git-tag }}
-        run: |-
-          docker tag $IMAGE_NAME:latest asia.gcr.io/$PROJECT_ID/$IMAGE_NAME:latest
-          docker tag $IMAGE_NAME:latest asia.gcr.io/$PROJECT_ID/$IMAGE_NAME:$GIT_TAG
-          docker push asia.gcr.io/$PROJECT_ID/$IMAGE_NAME:latest
-          docker push asia.gcr.io/$PROJECT_ID/$IMAGE_NAME:$GIT_TAG
+          ACTIONS_ALLOW_UNSECURE_COMMANDS: 'true'
+
+      - name: Use secret
+        run: |
+          echo "Secret value is: $SECRET_VAR"
+      # - name: Build Docker Image
+      #   run: docker build -t $IMAGE_NAME:latest .
+
+      # - name: Automatic Tagging of Releases
+      #   id: increment-git-tag
+      #   run: |
+      #     bash ./scripts/git_update.sh -v patch
+
+      # - name: Configure Docker Client
+      #   run: |-
+      #     gcloud auth configure-docker --quiet
+      #     gcloud auth configure-docker asia-southeast2-docker.pkg.dev --quiet
+
+      # - name: Push Docker Image to Container Registry (GCR)
+      #   env:
+      #     GIT_TAG: ${{ steps.increment-git-tag.outputs.git-tag }}
+      #   run: |-
+      #     docker tag $IMAGE_NAME:latest asia.gcr.io/$PROJECT_ID/$IMAGE_NAME:latest
+      #     docker tag $IMAGE_NAME:latest asia.gcr.io/$PROJECT_ID/$IMAGE_NAME:$GIT_TAG
+      #     docker push asia.gcr.io/$PROJECT_ID/$IMAGE_NAME:latest
+      #     docker push asia.gcr.io/$PROJECT_ID/$IMAGE_NAME:$GIT_TAG
       
-      - name: Push Docker Image to Artifact Registry
-        env:
-          GIT_TAG: ${{ steps.increment-git-tag.outputs.git-tag }}
-        run: |-
-          docker tag $IMAGE_NAME:latest asia-southeast2-docker.pkg.dev/$PROJECT_ID/images/$IMAGE_NAME:latest
-          docker tag $IMAGE_NAME:latest asia-southeast2-docker.pkg.dev/$PROJECT_ID/images/$IMAGE_NAME:$GIT_TAG
-          docker push asia-southeast2-docker.pkg.dev/$PROJECT_ID/images/$IMAGE_NAME:latest
-          docker push asia-southeast2-docker.pkg.dev/$PROJECT_ID/images/$IMAGE_NAME:$GIT_TAG
+      # - name: Push Docker Image to Artifact Registry
+      #   env:
+      #     GIT_TAG: ${{ steps.increment-git-tag.outputs.git-tag }}
+      #   run: |-
+      #     docker tag $IMAGE_NAME:latest asia-southeast2-docker.pkg.dev/$PROJECT_ID/images/$IMAGE_NAME:latest
+      #     docker tag $IMAGE_NAME:latest asia-southeast2-docker.pkg.dev/$PROJECT_ID/images/$IMAGE_NAME:$GIT_TAG
+      #     docker push asia-southeast2-docker.pkg.dev/$PROJECT_ID/images/$IMAGE_NAME:latest
+      #     docker push asia-southeast2-docker.pkg.dev/$PROJECT_ID/images/$IMAGE_NAME:$GIT_TAG
