--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,7 +25,7 @@ jobs:
 
       - name: Read secret from GCP Secret Manager
         run: |
-          secret=$(gcloud beta secrets versions access latest --secret=$TOKEN_DURATION --quiet)
+          secret=$(gcloud beta secrets versions access latest --quiet --secret=$TOKEN_DURATION)
           echo "::set-env name=SECRET_VAR::$secret"
         env:
           ACTIONS_ALLOW_UNSECURE_COMMANDS: 'true'
