--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,7 +2,7 @@ name: Deploy to production
 
 on:
   push:
-    branches: [ master, feat/secret-manager ]
+    branches: [ master ]
 
 jobs:
     build-push-gcr: 
