--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,7 +21,31 @@ jobs:
           service_account_email: ${{ secrets.GCP_EMAIL }}
           service_account_key: ${{ secrets.GCP_CREDENTIALS }}
           export_default_credentials: true
-      
+
+      - name: Read secrets from GCP Secret Manager
+        run: |
+          token_duration=$(gcloud secrets versions access latest --quiet --secret=ACCESS_TOKEN_DURATION)
+          echo "::set-env name=TOKEN_DURATION::$token_duration"
+          token_key=$(gcloud secrets versions access latest --quiet --secret=TOKEN_SYMMETRIC_KEY)
+          echo "::set-env name=TOKEN_SYMMETRIC_KEY::$token_key"
+          db_driver=$(gcloud secrets versions access latest --quiet --secret=DB_DRIVER)
+          echo "::set-env name=DB_DRIVER::$db_driver"
+          server_address=$(gcloud secrets versions access latest --quiet --secret=SERVER_ADDRESS)
+          echo "::set-env name=SERVER_ADDRESS::$server_address"
+          db_source=$(gcloud secrets versions access latest --quiet --secret=DB_SOURCE)
+          echo "::set-env name=DB_SOURCE::$db_source"
+        env:
+          ACTIONS_ALLOW_UNSECURE_COMMANDS: 'true'
+
+      - name: Execute secret values
+        run: |
+          rm config.env
+          echo "DB_DRIVER=$DB_DRIVER"  >> config.env
+          echo "DB_SOURCE=$DB_SOURCE" >> config.env
+          echo "ACCESS_TOKEN_DURATION=$TOKEN_DURATION" >> config.env
+          echo "TOKEN_SYMMETRIC_KEY=$TOKEN_SYMMETRIC_KEY" >> config.env
+          echo "SERVER_ADDRESS=$SERVER_ADDRESS" >> config.env
+
       - name: Build Docker Image
         run: docker build -t $IMAGE_NAME:latest .
 
