--- a/config.env
+++ b/config.env
@@ -4,6 +4,7 @@ DB_PASSWORD=postgres
 DB_NAME=trackerr
 DB_HOST=localhost
 DB_PORT=5432
+MIGRATION_URL=file://db/migration
 SERVER_ADDRESS=0.0.0.0:8080
 TOKEN_SYMMETRIC_KEY=12345678901234567890123456789012
 ACCESS_TOKEN_DURATION=15m
