--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,7 +1,7 @@
 version: "3.9"
 services:
   postgres:
-    image: postgres:15
+    image: postgres:14-alpine
     environment:
       - POSTGRES_PASSWORD=postgres
       - POSTGRES_USER=root
