--- a/config.env
+++ b/config.env
@@ -1,5 +1,10 @@
 DB_DRIVER=postgres
-DB_SOURCE=postgresql://root:postgres@localhost:5432/trackerr?sslmode=disable
+DB_USER=root
+DB_PASSWORD=postgres
+DB_NAME=trackerr
+DB_HOST=localhost
+DB_PORT=5432
+MIGRATION_URL=file://db/migration
 SERVER_ADDRESS=0.0.0.0:8080
 TOKEN_SYMMETRIC_KEY=12345678901234567890123456789012
 ACCESS_TOKEN_DURATION=15m
